# flux-platform

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  requirements.txt
.github/workflows/: ci.yml  release.yml  tests.yml
docs/: architecture.md  development.md
installer/: README.md  package.json
installer/src/main/: main.js  (+1 more)
scripts/: Launch.vbs  build.ps1  bump-version.js  clean.ps1  clear.ps1  dev.ps1  launch.bat  release.ps1
scripts/install/: setup_runtime.ps1  setup_sd_complete.py
src/: index.html  package-lock.json  package.json  setup.html  tsconfig.json  vite-env.d.ts  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/locales/: en.json  ru.json  zh.json
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/commands/: downloader.rs  health.rs  license.rs  logs.rs  mod.rs  modules.rs  settings.rs  system.rs  theme.rs  translations.rs  ui_state.rs  window.rs  window_settings.rs
src-tauri/src/models/: license.rs  mod.rs  module.rs  modules.rs  settings.rs  system.rs  ui_state.rs
src-tauri/src/services/: logs.rs  mod.rs  module_controller.rs  module_lifecycle.rs  settings.rs  system_monitor.rs  theme.rs  translations.rs  ui_state.rs  window_settings.rs
src-tauri/src/services/license/: mod.rs  verifier.rs
src-tauri/src/utils/: paths.rs  process.rs
src/backend/: __init__.py  __main__.py  app.py  bootstrap.py  electron.py  process.py  server.py
src/css/: main.css
tests/: __init__.py  test_core_services.py  test_models.py  test_validators.py
(+49 files in other folders)
