[package]
name = "flux-platform"
version = "0.1.0"
description = "Flux Platform"
authors = ["F0RLE"]
edition = "2021"

[lib]
name = "flux_platform_lib"
path = "src/lib.rs"

[dependencies]
tauri = { version = "2.9.5", features = ["image-ico", "image-png", "tray-icon"] }
tauri-plugin-shell = "2.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
log = "0.4.29"
env_logger = "0.11.8"
thiserror = "2.0.17"
windows-sys = { version = "0.61.2", features = ["Win32_System_JobObjects", "Win32_System_Threading", "Win32_Foundation", "Win32_Globalization"] }
dirs = "6.0.0"
once_cell = "1.21.3"
sysinfo = "0.37.2"
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = { version = "0.13.1", default-features = false, features = ["json", "stream", "native-tls", "gzip", "brotli", "deflate"] }
tokio = { version = "1.49.0", features = ["full"] }
futures-util = "0.3.31"
indexmap = { version = "2.12.1", features = ["std", "serde"] }
nvml-wrapper = "0.11.0"
tauri-plugin-global-shortcut = "2.3.1"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }
indexmap = { version = "2.12.1", features = ["std", "serde"] }
